p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
  labels:
    app: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - name: nginx1
          image: nginx:1.25.3-alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx1
spec:
  selector:
    app: nginx1
  ports:
    - protocol: TCP
      port: 80
      # port inside the cluster
      targetPort: 80
      # port exposed outside the cluster
      # nodePort: 30000
