p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  labels:
    app: nginx2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
        - name: nginx2
          image: nginx:1.25.3-alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
spec:
  type: NodePort
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      port: 80
      # port inside the cluster
      targetPort: 80
      # port exposed outside the cluster
      nodePort: 30001
