p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx3-deployment
  labels:
    app: nginx3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
        - name: nginx3
          image: nginx:1.25.3-alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx3-service
spec:
  type: NodePort
  selector:
    app: nginx3
  ports:
    - protocol: TCP
      port: 80
      # port inside the cluster
      targetPort: 80
      # port exposed outside the cluster
      nodePort: 30002
