p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: 'app1.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx1
                port:
                  number: 80
    - host: 'app2.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx2
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx3
                port:
                  number: 80
